# sistemas-distribuidos-projeto

./: .gitignore  README.md  bib-client.sh  bib-server.sh  cad-client.sh  cad-server.sh  compile.sh  pyproject.toml
src/biblioteca/: __main__.py  cad_client.py  cad_server.py  lib.py
src/biblioteca/cad/: Livro.py  PortalCadastroServicer.py  SyncMQTT.py  Usuario.py  cad_client.py  cad_livro.py  cad_server.py
src/biblioteca/cad/.cph/: .cad_server.py_f0320d3d3cb27b36aaca2969f619a207.prob
src/gRPC/: cadastro_pb2.py  cadastro_pb2_grpc.py
src/gRPC/protos/: cadastro.proto
